@@ -6,6 +6,7 @@
   * Added #link_elements to ElementLocators
   * Added #checkbox_elements to ElementLocators
   * Added #radio_button_elements to ElementLocators
+  * Added #div_elements to ElementLocators
 === 2016-11-15
 * Enhancements
   * Added #button_elements to ElementLocators
